--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,13 +63,17 @@
         android:layout_marginHorizontal="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="8dp" />
+        android:layout_marginVertical="8dp"
+        android:background="@color/purple"
+        android:text="@string/check"/>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/nextButton"
         android:layout_marginHorizontal="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="8dp" />
+        android:layout_marginVertical="8dp"
+        android:background="@color/pink"
+        android:text="@string/next"/>
 
 </LinearLayout>
