--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     <Space
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:layout_weight="0.5" />
 
     <TextView
         android:id="@+id/questionTextView"
@@ -75,5 +75,10 @@
         android:layout_marginVertical="8dp"
         android:background="@color/pink"
         android:text="@string/next"/>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.25" />
 
 </LinearLayout>
