--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -14,6 +14,7 @@
 
         <TextView
             android:layout_gravity="top"
+            android:layout_margin="16dp"
             android:id="@+id/questionTextView"
             android:gravity="center"
             android:padding="8dp"
@@ -23,6 +24,7 @@
             tools:text="Some question herehghghghgfhghgfhgfh" />
 
         <androidx.appcompat.widget.AppCompatButton
+            android:layout_margin="16dp"
             android:layout_gravity="bottom"
             android:id="@+id/checkButton"
             android:layout_marginHorizontal="16dp"
@@ -33,6 +35,7 @@
             android:text="@string/check"/>
 
         <androidx.appcompat.widget.AppCompatButton
+            android:layout_margin="16dp"
             android:layout_gravity="bottom"
             android:id="@+id/nextButton"
             android:layout_marginHorizontal="16dp"
