--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,12 +12,12 @@
         android:layout_height="0dp"
         android:layout_weight="0.5" />
 
-    <TextView
+    <ru.n857l.quizgame.views.question.QuestionTextView
         android:id="@+id/questionTextView"
-        android:gravity="center"
-        android:padding="8dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center"
+        android:padding="8dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
         tools:text="Some question herehghghghgfhghgfhgfh fhgfh ghgh fghgf cxvbc.." />
 
@@ -26,55 +26,55 @@
         android:layout_height="0dp"
         android:layout_weight="1" />
 
-    <androidx.appcompat.widget.AppCompatButton
+    <ru.n857l.quizgame.views.choice.ChoiceButton
         android:id="@+id/firstChoiceButton"
-        android:layout_marginHorizontal="16dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp" />
 
-    <androidx.appcompat.widget.AppCompatButton
+    <ru.n857l.quizgame.views.choice.ChoiceButton
         android:id="@+id/secondChoiceButton"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="8dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="8dp" />
 
-    <androidx.appcompat.widget.AppCompatButton
+    <ru.n857l.quizgame.views.choice.ChoiceButton
         android:id="@+id/thirdChoiceButton"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="8dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="8dp" />
 
-    <androidx.appcompat.widget.AppCompatButton
+    <ru.n857l.quizgame.views.choice.ChoiceButton
         android:id="@+id/forthChoiceButton"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="8dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="8dp" />
 
     <Space
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1" />
 
-    <androidx.appcompat.widget.AppCompatButton
+    <ru.n857l.quizgame.views.visibilityButton.VisibilityButton
         android:id="@+id/checkButton"
-        android:layout_marginHorizontal="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
         android:layout_marginVertical="8dp"
         android:background="@color/purple"
-        android:text="@string/check"/>
+        android:text="@string/check" />
 
-    <androidx.appcompat.widget.AppCompatButton
+    <ru.n857l.quizgame.views.visibilityButton.VisibilityButton
         android:id="@+id/nextButton"
-        android:layout_marginHorizontal="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
         android:layout_marginVertical="8dp"
         android:background="@color/pink"
-        android:text="@string/next"/>
+        android:text="@string/next" />
 
     <Space
         android:layout_width="match_parent"
